# Agent2Agent

./: README.md
buarque_agent_langgraph/: pyproject.toml
buarque_agent_langgraph/app/: __main__.py  agent.py  agent_executor.py
cartola_agent_adk/: __main__.py  agent.py  agent_executor.py  pyproject.toml
dilermano_agent_crewai/: __main__.py  agent.py  config.py  pyproject.toml
host_agent_adk/: pyproject.toml
host_agent_adk/host/: agent.py  config.py  host_agent.py  jam_session_tools.py  remote_agent_connection.py
